--- a/Flutter/NPK-Link/flutter_application_1/pubspec.yaml
+++ b/Flutter/NPK-Link/flutter_application_1/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   #Untuk mendapatkan lokasi 
   geolocator: ^10.1.0
 
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
