--- a/Backend/k8s-manifests/ingest-api-service.yaml
+++ b/Backend/k8s-manifests/ingest-api-service.yaml
@@ -7,6 +7,5 @@ spec:
   selector:
     app: ingest-api
   ports:
-  - protocol: TCP
-    port: 5000
-    targetPort: 5000
+    - port: 5000
+      targetPort: 5000
